# pi-pico-templates

./: CMakeLists.txt  README.md  create.sh  download.sh  pico_sdk_import.cmake  project.c  setup.sh
